<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_us">

    <fragment
        android:id="@+id/navigation_us"
        android:name="com.example.p10bottomnav.ui.us.UsFragment"
        android:label="@string/title_us"
        tools:layout="@layout/fragment_us" />

    <fragment
        android:id="@+id/navigation_gallery"
        android:name="com.example.p10bottomnav.ui.gallery.GalleryFragment"
        android:label="@string/title_gallery"
        tools:layout="@layout/fragment_gallery">
        <action
            android:id="@+id/action_nav_gallery_to_detail"
            app:destination="@+id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_credit"
        android:name="com.example.p10bottomnav.ui.credit.CreditFragment"
        android:label="@string/title_credit"
        tools:layout="@layout/fragment_credit" />

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.example.p10bottomnav.DetailFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_detail"/>
</navigation>